tests/src/frontend/syntax/invalid/under_ident_6.sk
class Foo<T> {
  fun foo{_ : Int}: void { void }
}
